// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MessageContent /> file type message does not have fileName property 1`] = `
<Fragment>
  <styled.div>
    <styled.a
      alt="image"
      href="https://www.test.com/file.pdf"
      target="_blank"
    >
      <styled.div>
        <Icon
          id="5e429c11749914000f07349f"
          name="attachment_blue"
          placeholher="image"
        />
      </styled.div>
      <FileNameContainer
        title="file.pdf"
      >
        file.pdf
      </FileNameContainer>
    </styled.a>
  </styled.div>
</Fragment>
`;

exports[`<MessageContent /> file type message has text property and it is not video/mp4 type 1`] = `
<Fragment>
  <styled.div>
    <styled.a
      alt="image"
      href="https://www.test.com/file.pdf"
      target="_blank"
    >
      <styled.div>
        <Icon
          id="5e429c11749914000f07349f"
          name="attachment_blue"
          placeholher="image"
        />
      </styled.div>
      <FileNameContainer
        title="most-awesome-file.pdf"
      >
        most-awesome-file.pdf
      </FileNameContainer>
    </styled.a>
  </styled.div>
</Fragment>
`;

exports[`<MessageContent /> file type message is "video/mp4" format and has a caption 1`] = `
<Fragment>
  <styled.div>
    <styled.a
      alt="image"
      href="https://www.test.com/file.mp4"
      target="_blank"
    >
      <styled.div>
        <Icon
          id="5e429c11749914000f07349f"
          name="attachment_blue"
          placeholher="image"
        />
      </styled.div>
      <FileNameContainer
        title="83hbu88d88dh-99ajffjf-11f4.mp4"
      >
        83hbu88d88dh-99ajffjf-11f4.mp4
      </FileNameContainer>
    </styled.a>
    <MessageTextContainer>
      Hey look at this video!!
    </MessageTextContainer>
  </styled.div>
</Fragment>
`;

exports[`<MessageContent /> file type message is "video/mp4" format and has a text property in pending state 1`] = `
<Fragment>
  <styled.div>
    <styled.a
      alt="image"
      href="https://www.test.com/file.mp4"
      target="_blank"
    >
      <styled.div>
        <Icon
          id="5e429c11749914000f07349f"
          name="attachment_blue"
          placeholher="image"
        />
      </styled.div>
      <FileNameContainer
        title="most-awesome-video.mp4"
      >
        most-awesome-video.mp4
      </FileNameContainer>
    </styled.a>
  </styled.div>
</Fragment>
`;

exports[`<MessageContent /> file type message is "video/mp4" format and has a text property with its name 1`] = `
<Fragment>
  <styled.div>
    <styled.a
      alt="image"
      href="https://www.test.com/file.mp4"
      target="_blank"
    >
      <styled.div>
        <Icon
          id="5e429c11749914000f07349f"
          name="attachment_blue"
          placeholher="image"
        />
      </styled.div>
      <FileNameContainer
        title="most-awesome-video.mp4"
      >
        most-awesome-video.mp4
      </FileNameContainer>
    </styled.a>
  </styled.div>
</Fragment>
`;

exports[`<MessageContent /> file type message is in a pending state 1`] = `
<Fragment>
  <MessageTextContainer
    pending={true}
  >
    <LoadingSpinnerSVG
      color="#b2b2b2"
      size={28}
    />
    This is a test
  </MessageTextContainer>
</Fragment>
`;

exports[`<MessageContent /> image type message has a camption along with the file 1`] = `
<Fragment>
  <styled.div>
    <styled.a
      alt="image"
      href="https://www.test.com/file.jpg"
      style={
        Object {
          "display": "contents",
        }
      }
      target="_blank"
    >
      <Image
        id="5e429c11749914000f07349f"
        placeholher="image"
        src="https://www.test.com/file.jpg"
        style={
          Object {
            "height": "auto",
            "maxWidth": "300px",
          }
        }
      />
    </styled.a>
    <MessageTextContainer>
      hey, look at this file!
    </MessageTextContainer>
  </styled.div>
</Fragment>
`;

exports[`<MessageContent /> should render file message component correctly 1`] = `
<Fragment>
  <styled.div>
    <styled.a
      alt="image"
      href="https://www.test.com/file.docx"
      target="_blank"
    >
      <styled.div>
        <Icon
          id="5e429c11749914000f07349f"
          name="attachment_blue"
          placeholher="image"
        />
      </styled.div>
      <FileNameContainer
        title="Test.jpg"
      >
        Test.jpg
      </FileNameContainer>
    </styled.a>
  </styled.div>
</Fragment>
`;

exports[`<MessageContent /> should render fileNotFoundInTranscript error when file type message does not have file property 1`] = `
<Fragment>
  <span
    style={
      Object {
        "color": "red",
      }
    }
  >
    <FormattedMessage
      defaultMessage="File not found in transcript"
      id="app.components.messageContent.fileNotFoundInTranscript"
      values={Object {}}
    />
  </span>
</Fragment>
`;

exports[`<MessageContent /> should render fileNotFoundInTranscript error when image type message does not have file property 1`] = `
<span
  style={
    Object {
      "color": "red",
    }
  }
>
  <FormattedMessage
    defaultMessage="File not found in transcript"
    id="app.components.messageContent.fileNotFoundInTranscript"
    values={Object {}}
  />
</span>
`;

exports[`<MessageContent /> should render image message component correctly 1`] = `
<Fragment>
  <styled.div>
    <styled.a
      alt="image"
      href="https://www.test.com/file.jpg"
      style={
        Object {
          "display": "contents",
        }
      }
      target="_blank"
    >
      <Image
        id="5e429c11749914000f07349f"
        placeholher="image"
        src="https://www.test.com/file.jpg"
        style={
          Object {
            "height": "auto",
            "maxWidth": "300px",
          }
        }
      />
    </styled.a>
  </styled.div>
</Fragment>
`;

exports[`<MessageContent /> should render styled component with text message 1`] = `
<MessageContent
  message={
    Object {
      "contentType": "text",
      "file": Object {},
      "from": "Irvin Sandoval",
      "id": "5e429c11749914000f07349f",
      "resourceId": null,
      "text": "This is a test",
      "timestamp": 1581423633126,
      "type": "customer",
    }
  }
>
  <MessageTextContainer>
    <div
      className="sc-bZQynM eDJHjF"
    >
      This is a test
    </div>
  </MessageTextContainer>
</MessageContent>
`;

exports[`<MessageContent /> should render styled component with text message in a pending state 1`] = `
<MessageContent
  message={
    Object {
      "contentType": "text",
      "file": Object {},
      "from": "Irvin Sandoval",
      "id": "5e429c11749914000f07349f",
      "pending": true,
      "resourceId": null,
      "text": "This is a test",
      "timestamp": 1581423633126,
      "type": "customer",
    }
  }
>
  <MessageTextContainer
    pending={true}
  >
    <div
      className="sc-bZQynM cqVKfM"
    >
      This is a test
    </div>
  </MessageTextContainer>
</MessageContent>
`;

exports[`<MessageContent /> should render text message component correctly 1`] = `
<Fragment>
  <MessageTextContainer>
    This is a test
  </MessageTextContainer>
</Fragment>
`;

exports[`<MessageContent /> text message is in a pending state 1`] = `
<Fragment>
  <MessageTextContainer
    pending={true}
  >
    This is a test
  </MessageTextContainer>
</Fragment>
`;

exports[`<QuotedMessageContent /> quoted file message does not have fileName property 1`] = `
<Fragment>
  <MessageTextContainer />
</Fragment>
`;

exports[`<QuotedMessageContent /> quoted file message is "video/mp4" format and has a caption 1`] = `
<Fragment>
  <MessageTextContainer>
    Hey look at this video!!
  </MessageTextContainer>
</Fragment>
`;

exports[`<QuotedMessageContent /> quoted file message is "video/mp4" format and has a text property with its name 1`] = `
<Fragment>
  <MessageTextContainer>
    most-awesome-video.mp4
  </MessageTextContainer>
</Fragment>
`;

exports[`<QuotedMessageContent /> quoted image message has a caption along with the file 1`] = `
<Fragment>
  <MessageTextContainer>
    hey, look at this file!
  </MessageTextContainer>
</Fragment>
`;

exports[`<QuotedMessageContent /> quoted text message is in a pending state 1`] = `
<Fragment>
  <QuotedMessageTextContainer>
    This is a test
  </QuotedMessageTextContainer>
  <MessageTextContainer
    pending={true}
  >
    This is a quoted message
  </MessageTextContainer>
</Fragment>
`;

exports[`<QuotedMessageContent /> should render fileNotFoundInTranscript error when quoted file message does not have file property 1`] = `
<Fragment>
  <MessageTextContainer />
</Fragment>
`;

exports[`<QuotedMessageContent /> should render fileNotFoundInTranscript error when quoted image type message does not have file property 1`] = `
<Fragment>
  <MessageTextContainer />
</Fragment>
`;

exports[`<QuotedMessageContent /> should render quoted file message component correctly 1`] = `
<Fragment>
  <MessageTextContainer />
</Fragment>
`;

exports[`<QuotedMessageContent /> should render quoted image message component correctly 1`] = `
<Fragment>
  <QuotedMessageTextContainer>
    <styled.div>
      <styled.a
        alt="image"
        href="https://www.test.com/file.jpg"
        style={
          Object {
            "display": "contents",
          }
        }
        target="_blank"
      >
        <Image
          id="5e429c11749914000f07349f"
          placeholher="image"
          src="https://www.test.com/file.jpg"
          style={
            Object {
              "height": "auto",
              "maxWidth": "50px",
            }
          }
        />
      </styled.a>
    </styled.div>
  </QuotedMessageTextContainer>
  <MessageTextContainer>
    This is a quoted message
  </MessageTextContainer>
</Fragment>
`;

exports[`<QuotedMessageContent /> should render quoted text message component correctly 1`] = `
<Fragment>
  <QuotedMessageTextContainer>
    This is a test
  </QuotedMessageTextContainer>
  <MessageTextContainer>
    This is a quoted message
  </MessageTextContainer>
</Fragment>
`;

exports[`<QuotedMessageContent /> should render styled component with quoted text message 1`] = `
<MessageContent
  message={
    Object {
      "contentType": "text",
      "file": Object {},
      "from": "Irvin Sandoval",
      "id": "601ad7e0f41170000cced559",
      "quotedMessage": Object {
        "content": Object {
          "file": Object {},
          "id": "5e429c11749914000f07349f",
          "text": "This is a test",
          "type": "text",
        },
      },
      "resourceId": null,
      "text": "This is a quoted message",
      "timestamp": 1581423633126,
      "type": "customer",
    }
  }
>
  <QuotedMessageTextContainer>
    <div
      className="sc-gzVnrw idmQkH"
    >
      This is a test
    </div>
  </QuotedMessageTextContainer>
  <MessageTextContainer>
    <div
      className="sc-bZQynM eDJHjF"
    >
      This is a quoted message
    </div>
  </MessageTextContainer>
</MessageContent>
`;

exports[`<QuotedMessageContent /> should render styled component with quoted text message in a pending state 1`] = `
<MessageContent
  message={
    Object {
      "contentType": "text",
      "file": Object {},
      "from": "Irvin Sandoval",
      "id": "601ad7e0f41170000cced559",
      "pending": true,
      "quotedMessage": Object {
        "content": Object {
          "file": Object {},
          "id": "5e429c11749914000f07349f",
          "text": "This is a test",
          "type": "text",
        },
      },
      "resourceId": null,
      "text": "This is a quoted message",
      "timestamp": 1581423633126,
      "type": "customer",
    }
  }
>
  <QuotedMessageTextContainer>
    <div
      className="sc-gzVnrw idmQkH"
    >
      This is a test
    </div>
  </QuotedMessageTextContainer>
  <MessageTextContainer
    pending={true}
  >
    <div
      className="sc-bZQynM cqVKfM"
    >
      This is a quoted message
    </div>
  </MessageTextContainer>
</MessageContent>
`;
